added controls description

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="message">
-            <p>press Esc for play/pause music</p>
+            <p>press Esc for play/pause music. controls: arrows and space bar</p>
         </div>
         <header></header>
         <section></section>
